Feat: First working version

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,10 +5,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="popup-style.css" />
+    <link rel="stylesheet" href="css/pico.min.css" />
   </head>
   <body>
-    <h1>Canary</h1>
-    <div id="restaurants"></div>
+    <div class="heading-container">
+      <img src="../../assets/icon.png" alt="canary-icon" class="logo" />
+      <h1>Canary</h1>
+    </div>
+    <div id="settings">These are the settings</div>
     <script src="popup-script.js"></script>
   </body>
 </html>
